trunk/Archive2/db/c3384a255c4d5f/main.cpp
#include <functional>

template<typename ...Args>
void caller(std::function<void(Args&&...)> function)
{

}

int main()
{
    caller([&] () { });
}
